fixed the resizing of the navbar when viewing the admin page on smaller screens

--- a/admin/admin.styl
+++ b/admin/admin.styl
@@ -25,9 +25,6 @@
   width: 100%
   position: relative
 
-.ts-admin-sidebar.affix
-  position: fixed
-
 .ts-admin-body.container
   width: 100%
 
